skills and projects added

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>portfolio</title>
+    <title>Shahzad's portfolio</title>
 
 
 
@@ -53,7 +53,8 @@
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0 ">
                         <li class="nav-item"><a class="nav-link" href="/index.html">About</a></li>
                         <li class="nav-item"><a class="nav-link" href="">Contact</a></li>
-                        <li class="nav-item"><a class="nav-link" href="/resume.html">Resume</a></li>
+                        <li class="nav-item"><a class="nav-link" href="/Skill&eduction.html">Skills $ education</a></li>
+                        <li class="nav-item"><a class="nav-link" href="/MyProjects.html">My projects</a></li>
 
                     </ul>
                 </div>
@@ -76,12 +77,17 @@
                         <h4>
                             <a class="name nav-item" href="">Shahzad Ahmad</a>
                         </h4>
-                        <h6 class="bio">Web developer</h6>
+                        <h6 class="bio">Mobile app developer</h6>
 
-                        <a class="bio-icons" href="https://m.facebook.com/profile.php?mibextid=LQQJ4d"><i class="fa-brands fa-facebook-f"></i></a>
-                        <a class="bio-icons" href="https://www.instagram.com/ishahzad.ahmad?igsh=ZXpndG81dmVsaTM0"><i class="fa-brands fa-twitter"></i></a>
-                        <a class="bio-icons" href="https://www.linkedin.com/in/shahzad-ahmad-741865225?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app"><i class="fa-brands fa-linkedin-in"></i></a>
-                        <a class="bio-icons" href="https://github.com/shahzad885"><i class="fa-brands fa-github style"></i></a>
+                        <a class="bio-icons" href="https://m.facebook.com/profile.php?mibextid=LQQJ4d"><i
+                                class="fa-brands fa-facebook-f"></i></a>
+                        <a class="bio-icons" href="https://www.instagram.com/ishahzad.ahmad?igsh=ZXpndG81dmVsaTM0"><i
+                                class="fa-brands fa-instagram"></i></a>
+                        <a class="bio-icons"
+                            href="https://www.linkedin.com/in/shahzad-ahmad-741865225?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app"><i
+                                class="fa-brands fa-linkedin-in"></i></a>
+                        <a class="bio-icons" href="https://github.com/shahzad885"><i
+                                class="fa-brands fa-github style"></i></a>
 
                     </div>
 
@@ -201,9 +207,10 @@
                         </div>
                     </div>
                     <div>
-                       <a href="images/cv.pdf"> <button type="button" class="btn btn-primary btn-lg Download-btn"> <i class="fa-solid fa-download "></i> Download
-                        CV
-                    </button></a>
+                        <a href="shahzad.pdf"> <button type="button" class="btn btn-primary btn-lg Download-btn"> <i
+                                    class="fa-solid fa-download "></i> Download
+                                CV
+                            </button></a>
                     </div>
 
 
@@ -219,13 +226,9 @@
                         <h1 class="About-heading">About </h1>
 
                         <p>
-                            I'm Creative Frontend web developer and SMM expert from Islamabad, Pakistan . I'm doing BSCS from Comsats , majors in software development. I enjoy turning complex problems into simple, beautiful and intuitive
-                            designs. 
+                            I am a dedicated and skilled Fullstack Flutter Developer with a proven track record of building robust, scalable, and user-friendly mobile and web applications. My expertise spans Flutter and Dart for frontend development, and I leverage Firebase, Express.js, Firestore, and MongoDB for backend and database solutions. With hands-on experience from internships, self-driven learning through certifications, and a passion for innovation, I offer end-to-end development services tailored to meet your business needs. My goal is to deliver high-quality, efficient, and impactful applications that enhance user experience and drive success.
                         </p>
-                        <p>
-                            My aim is to bring across your message and identity in the most creative way. I created web
-                             for many famous brand companies.
-                        </p>
+                       
 
 
                     </div>
@@ -233,6 +236,27 @@
                         <h1 class="what-i-do-heading">What I Do!</h1>
 
                         <div class="row four-skills">
+
+                           
+
+                            <div style="background-color: #eef5fa;"
+                                class="col-lg-5 col-md-5 col-sm-12 col-12 what-i-do-1  ">
+
+                                <div class="row">
+                                    <div class=" col-4 what-i-do-icon">
+                                        <img class="what-i-do-icon" src="images/Mobile_app.svg" alt="">
+                                    </div>
+                                    <div class="col-8 web-dev-desc">
+                                        <h3 style="font-size: 23px;">Mobile App Dev</h3>
+                                        <p>
+                                            Full stack mobile app development using Flutter, Dart, Firebase etc with a focus on creating responsive and user-friendly applications.
+                                        </p>
+
+
+                                    </div>
+                                </div>
+
+                            </div>
 
                             <div class="col-lg-5 col-md-5 col-sm-12 col-12 what-i-do-1 ">
 
@@ -243,26 +267,8 @@
                                     <div class="col-8 web-dev-desc">
                                         <h3 style="font-size: 23px;">Web Development</h3>
                                         <p>
-                                         Expert in HTML | CSS | Javascript. Have experience of 2+ years in frontend development and build many projects.
-                                        </p>
-
-
-                                    </div>
-                                </div>
-
-                            </div>
-
-                            <div style="background-color: #eef5fa;"
-                                class="col-lg-5 col-md-5 col-sm-12 col-12 what-i-do-1  ">
-
-                                <div class="row">
-                                    <div class=" col-4 what-i-do-icon">
-                                        <img class="what-i-do-icon" src="images/photograph.svg" alt="">
-                                    </div>
-                                    <div class="col-8 web-dev-desc">
-                                        <h3 style="font-size: 23px;">Photography</h3>
-                                        <p>
-                                           Passionate photographer specializing in capturing the fleeting moments of life with an artistic eye.
+                                            Expert in MERN (MongoDB, Express, React, NOde.js)stack with experience of 2+ years 
+                                             and build many projects.
                                         </p>
 
 
@@ -277,12 +283,12 @@
 
                                 <div class="row">
                                     <div class=" col-4 what-i-do-icon">
-                                        <img class="what-i-do-icon" src="images/hashtag-solid.svg" alt="">
+                                        <img class="what-i-do-icon" src="images/cross_platform.png" alt="">
                                     </div>
                                     <div class="col-8 web-dev-desc">
-                                        <h3 style="font-size: 23px;">SMM Expert</h3>
+                                        <h3 style="font-size: 23px;">Cross Platform</h3>
                                         <p>
-                                            I'm expert in SMM as well and have experience of 5+ years. Currently im running smm store ( theskypanel.com ).
+                                            Cross-platform mobile application developer using Flutter and Dart with a focus on delivering seamless user experiences across multiple platforms.
                                         </p>
 
 
@@ -295,12 +301,12 @@
 
                                 <div class="row">
                                     <div class=" col-4 what-i-do-icon">
-                                        <img class="what-i-do-icon" src="images/c.svg" alt="">
+                                        <img class="what-i-do-icon" src="images/performance.svg" alt="">
                                     </div>
                                     <div class="col-8 web-dev-desc">
-                                        <h3 style="font-size: 23px;">C++ Expert</h3>
+                                        <h3 style="font-size: 23px;">App performance</h3>
                                         <p>
-                                            I'm proficient in C++, with a strong grasp of data structures and algorithms.
+                                            App performance optimization and debugging are crucial for ensuring a smooth user experience. I specialize in identifying bottlenecks, optimizing code, and debugging issues to enhance the performance of applications.
                                         </p>
 
 
@@ -341,16 +347,6 @@
 
 
                 </div>
-
-
-
-
-
-
-
-
-
-
 
 
 
