--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0 ">
                         <li class="nav-item"><a class="nav-link" href="/index.html">About</a></li>
                         <li class="nav-item"><a class="nav-link" href="">Contact</a></li>
-                        <li class="nav-item"><a class="nav-link" href="/Skill&eduction.html">Skills $ education</a></li>
-                        <li class="nav-item"><a class="nav-link" href="/MyProjects.html">My projects</a></li>
+                        <li class="nav-item"><a class="nav-link" href="Skill&eduction.html">Skills $ education</a></li>
+                        <li class="nav-item"><a class="nav-link" href="MyProjects.html">My projects</a></li>
 
                     </ul>
                 </div>
@@ -375,5 +375,6 @@
             crossorigin="anonymous"></script>
     </section>
 </body>
+
 
 </html>
