--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                         <li class="nav-item"><a class="nav-link" href="/index.html">About</a></li>
                         <li class="nav-item"><a class="nav-link" href="">Contact</a></li>
                         <li class="nav-item"><a class="nav-link" href="Skill&eduction.html">Skills $ education</a></li>
-                        <li class="nav-item"><a class="nav-link" href="MyProjects.html">My projects</a></li>
+                        <li class="nav-item"><a class="nav-link" href="Personal-Portfolio/MyProjects.html">My projects</a></li>
 
                     </ul>
                 </div>
@@ -378,3 +378,4 @@
 
 
 </html>
+
