--- a/index.html
+++ b/index.html
@@ -33,26 +33,38 @@
 
     <section class="index">
 
-        <!-- navbar-section -->
-        <nav class="navbar navbar-expand-lg navbar-light header">
-            <div class="container-fluid">
-                <a class="navbar-brand" href="index.html">Shahzad.</a>
-                <button class="navbar-toggler ms-auto" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#navbar-items" aria-controls="navbarSupportedContent" aria-expanded="false"
-                    aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <div class="container">
+    <a class="navbar-brand" href="index.html">My Portfolio</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav ms-auto">
+        <!-- About -->
+        <li class="nav-item">
+          <a class="nav-link" href="index.html">About</a>
+        </li>
 
-                <div class="collapse navbar-collapse" id="navbar-items">
-                    <ul class="navbar-nav ms-auto mb-2 mb-lg-0 ">
-                        <li class="nav-item"><a class="nav-link" href="index.html">About</a></li>
-                        <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
-                        <li class="nav-item"><a class="nav-link" href="skills-education.html">Skills & Education</a></li>
-                        <li class="nav-item"><a class="nav-link" href="Personal-Portfolio/MyProjects.html">My Projects</a></li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
+        <!-- Skills & Education -->
+        <li class="nav-item">
+          <a class="nav-link" href="Personal-Portfolio/skills-education.html">Skills & Education</a>
+        </li>
+
+        <!-- Projects -->
+        <li class="nav-item">
+          <a class="nav-link" href="Personal-Portfolio/MyProjects.html">My Projects</a>
+        </li>
+
+        <!-- Contact -->
+        <li class="nav-item">
+          <a class="nav-link" href="Personal-Portfolio/contact.html">Contact</a>
+        </li>
+      </ul>
+    </div>
+  </div>
+</nav>
+
 
         <!-- side bar and main page -->
         <section class="all-page">
@@ -237,3 +249,4 @@
     </section>
 </body>
 </html>
+
